--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -20,3 +20,4 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         npm i @cloudflare/wrangler -g
+        cargo install wrangler
