--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -14,8 +14,7 @@ jobs:
       - name: step 2 - Add artifacts to publish to the temp folder
         run: |
           sleep 15
-          ls ../
-          ls 
+          ls ../test
           #cd scripting
           #cmod +x *
           #./compile.sh
