--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -13,11 +13,11 @@ jobs:
         
       - name: step 2 - Add artifacts to publish to the temp folder
         run: |
-          sleep 15
-          ls ../test
-          #cd scripting
-          #cmod +x *
-          #./compile.sh
+          git clone https://github.com/amirwolf5122/test.git
+          cd test
+          cd scripting
+          cmod +x *
+          ./compile.sh
     
       - name: Step 3 - Use the Upload Artifact GitHub Action
         uses: actions/upload-artifact@v2
