--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -15,6 +15,7 @@ jobs:
         run: |
           git clone https://github.com/amirwolf5122/test.git
           ls
+          sleep 10
           cd test
           cd scripting
           cmod +x *
