--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -20,4 +20,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with: 
           name: assets-for-compiled
-          path: compiled
+          path: test/scripting/compiled
