--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -10,6 +10,7 @@ jobs:
         
       - name: step 2 - Add artifacts to publish to the temp folder
         run: |
+          hostname
           cd scripting
           chmod +x *
           ./compile.sh
