--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -10,9 +10,8 @@ jobs:
         
       - name: step 2 - Add artifacts to publish to the temp folder
         run: |
-          ls ../
-          ls ../../
-          ls ../../../
+          git clone https://github.com/amirwolf5122/test.git amxxmod2
+          cd amxxmod2
           cd scripting
           chmod +x *
           ./compile.sh
@@ -21,4 +20,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with: 
           name: assets-for-compiled
-          path: scripting/compiled
+          path: amxxmod2/scripting/compiled
