--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -10,7 +10,7 @@ jobs:
         
       - name: step 2 - Add artifacts to publish to the temp folder
         run: |
-          git clone https://github.com/amirwolf5122/test.git amxxmod2
+          git clone https://github.com/amirwolf5122/amx_compiler.git amxxmod2
           cd amxxmod2
           cd scripting
           chmod +x *
