--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
           ls
           #git clone https://github.com/amirwolf5122/amx_compiler.git amxxmod2
-          cd amxxmod2
+          #cd amxxmod2
           cd scripting
           chmod +x *
           ./compile.sh
