--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -19,4 +19,10 @@ jobs:
         with: 
           name: compiled
           path: scripting/compiled
-
+      - name: Deploy
+        uses: s0/git-publish-subdir-action@master
+        env:
+          REPO: self
+          BRANCH: data_build
+          FOLDER: scripting/compiled
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
