--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -1,47 +1,38 @@
-name: Compile and Upload Release
-
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch: # برای اجرای دستی
+    # Sequence of patterns matched against refs/tags
+    tags:
+    - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+
+name: Upload Release Asset
 
 jobs:
-  build_and_release:
+  build:
+    name: Upload Release Asset
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Run compile script
-      run: |
-        cd scripting
-        chmod +x *
-        ./compile.sh
-
-    - name: Upload compiled artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: compiled
-        path: scripting/compiled
-
-  release:
-    name: "Upload release"
-    runs-on: ubuntu-latest
-    needs: build_and_release
-    if: ${{ github.event_name == 'push' }}
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Create a new release and upload artifacts
-      run: |
-        RELEASE_TAG="release-${{ github.sha }}"
-        gh release create "$RELEASE_TAG" scripting/compiled/* \
-          --title "Release $RELEASE_TAG" \
-          --notes "Automated release for $RELEASE_TAG" \
-          --repo "$GITHUB_REPOSITORY" \
-          --prerelease
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Build project # This would actually build your project, using zip for an example artifact
+        run: |
+          zip --junk-paths my-artifact README.md
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./my-artifact.zip
+          asset_name: my-artifact.zip
+          asset_content_type: application/zip
