--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -1,38 +1,35 @@
+name: Compile and Release
+
 on:
   push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-    - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-
-name: Upload Release Asset
+    branches:
+      - main  # یا هر شاخه‌ای که می‌خواهید این ورکفلو اجرا شود.
 
 jobs:
-  build:
-    name: Upload Release Asset
+  build_and_release:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Build project # This would actually build your project, using zip for an example artifact
-        run: |
-          zip --junk-paths my-artifact README.md
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./my-artifact.zip
-          asset_name: my-artifact.zip
-          asset_content_type: application/zip
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Git
+      run: git config --global user.name "Your Name" && git config --global user.email "your.email@example.com"
+
+    - name: Install dependencies (optional)
+      run: |
+        sudo apt-get update
+        sudo apt-get install zip  # نصب بسته zip در صورت نیاز
+
+    - name: Run compile.sh and zip the compiled files
+      run: |
+        cd scripting
+        chmod +x *
+        ./compile.sh
+        zip -r compiled.zip compiled/
+        
+    - name: Upload Release Asset
+      uses: ncipollo/release-action@v1
+      with:
+        files: scripting/compiled.zip
+        tag: v1  # یا نام دیگری برای برچسب نسخه
