--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -1,37 +1,155 @@
-name: run
+name: Build
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - main
+
 jobs:
-  build_and_release:
+  android:
+    name: Android
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout sources
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+      - name: Fetch YaPB Graphs from DB
+        run: scripts/yapb_graph_dl.sh
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'temurin'
+          cache: gradle
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+      - name: Build
+        run: ./gradlew assembleDebug
+      - name: Sign APK
+        uses: r0adkll/sign-android-release@v1
+        with:
+          releaseDirectory: app/build/outputs/apk/debug
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+        env:
+          BUILD_TOOLS_VERSION: "34.0.0"
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: Android
+          path: app/build/outputs/apk/debug/app-debug-signed.apk
 
-    - name: Set up Git
-      run: git config --global user.name "Your Name" && git config --global user.email "your.email@example.com"
+  windows:
+    name: Windows
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        arch: ['x86', 'amd64']
+      fail-fast: false
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+      - name: Setup Visual Studio
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: ${{ matrix.arch }}
+      - name: Configure project
+        run: cmake --preset "win32-release-${{ matrix.arch }}"
+      - name: Run appversion.sh
+        run: regamedll/version/appversion.sh "${{ github.workspace }}/3rdparty/ReGameDLL_CS"
+        shell: bash
+        working-directory: 3rdparty/ReGameDLL_CS
+      - name: Build
+        run: cmake --build . 
+        working-directory: build
+      - name: Package
+        run: cpack --config CPackConfig.cmake
+        working-directory: build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ runner.os }}-${{ matrix.arch }}
+          path: build/*.zip
 
-    - name: Install dependencies (optional)
-      run: |
-        sudo apt-get update
-        sudo apt-get install zip  # نصب بسته zip در صورت نیاز
+  linux:
+    name: Linux
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch: ['i386', 'amd64']
+      fail-fast: false
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+      - name: Install dependencies
+        run: |
+          sudo dpkg --add-architecture i386
+          sudo apt-get update
+          sudo apt-get install libatomic1:i386 libgcc-s1:i386 \
+            libstdc++6:i386 gcc-multilib g++-multilib cmake \
+            ninja-build libfontconfig-dev:i386 libfontconfig-dev
+      - name: Configure project
+        run: cmake --preset "linux-release-${{ matrix.arch }}"
+      - name: Build
+        run: cmake --build . 
+        working-directory: build
+      - name: Package
+        run: cpack --config CPackConfig.cmake
+        working-directory: build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ runner.os }}-${{ matrix.arch }}
+          path: build/*.tar.gz
 
-    - name: Run compile.sh and zip the compiled files
-      run: |
-        cd scripting
-        chmod +x *
-        ./compile.sh
-        zip -r compiled.zip compiled/  # فقط فایل‌ها درون پوشه compiled را فشرده می‌کنیم
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [android, windows, linux]
+    steps:
+      - name: Fetch artifacts
+        uses: actions/download-artifact@v4
+      - name: Remove old release
+        uses: ClementTsang/delete-tag-and-release@v0.3.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: continuous
+          delete_release: true
+          repo: ${{ env.GITHUB_REPOSITORY }}
+      - name: Prepare release
+        run: |
+          mv Android/app-debug-signed.apk CS16Client-Android.apk
 
-    - name: Upload the zip file as an artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: compiled-files  # نام artifact که آپلود می‌شود
-        path: scripting/compiled.zip  # مسیر فایل زیپ شده که باید آپلود شود
+          mv */*.zip .  # move all zip files to the current directory
+          mv */*.tar.gz .  # move all tar.gz files to the current directory
 
-    - name: Create Release and upload compiled.zip
-      uses: ncipollo/release-action@v1
-      with:
-        files: scripting/compiled.zip  # آپلود فایل زیپ به عنوان Release Asset
-        tag: v1  # یا نام دیگری برای برچسب نسخه
+          # فشرده‌سازی فایل‌های موجود در دایرکتوری scripting/compiled
+          zip -r compiled.zip scripting/compiled
+
+          sleep 60s
+      - name: Purge artifacts
+        uses: geekyeggo/delete-artifact@v2
+        with:
+          name: "*"
+      - name: Upload new release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_name: ${{ env.GITHUB_REPOSITORY }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file_glob: true
+          file: CS16Client-*
+          tag: continuous
+          overwrite: true
+          prerelease: true
+          release_name: CS16Client development build
