--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -3,102 +3,25 @@ name: amxx
 on: workflow_dispatch
 
 jobs:
-  android:
-    name: Android
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          submodules: recursive
-      - name: Fetch YaPB Graphs from DB
-        run: scripts/yapb_graph_dl.sh
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: 'temurin'
-          cache: gradle
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-      - name: Build
-        run: ./gradlew assembleDebug
-      - name: Sign APK
-        uses: r0adkll/sign-android-release@v1
-        with:
-          releaseDirectory: app/build/outputs/apk/debug
-          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias: ${{ secrets.ALIAS }}
-          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-          keyPassword: ${{ secrets.KEY_PASSWORD }}
-        env:
-          BUILD_TOOLS_VERSION: "34.0.0"
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: Android
-          path: app/build/outputs/apk/debug/app-debug-signed.apk
-
-  windows:
-    name: Windows
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        arch: ['x86', 'amd64']
-      fail-fast: false
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          submodules: recursive
-      - name: Setup Visual Studio
-        uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: ${{ matrix.arch }}
-      - name: Configure project
-        run: cmake --preset "win32-release-${{ matrix.arch }}"
-      - name: Run appversion.sh
-        run: regamedll/version/appversion.sh "${{ github.workspace }}/3rdparty/ReGameDLL_CS"
-        shell: bash
-        working-directory: 3rdparty/ReGameDLL_CS
-      - name: Build
-        run: cmake --build . 
-        working-directory: build
-      - name: Package
-        run: cpack --config CPackConfig.cmake
-        working-directory: build
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ runner.os }}-${{ matrix.arch }}
-          path: build/*.zip
-
   linux:
     name: Linux
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        arch: ['i386', 'amd64']
-      fail-fast: false
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           submodules: recursive
-      - name: Install dependencies
+      - name: RUN..
         run: |
-          sudo dpkg --add-architecture i386
-          sudo apt-get update
-          sudo apt-get install libatomic1:i386 libgcc-s1:i386 \
-            libstdc++6:i386 gcc-multilib g++-multilib cmake \
-            ninja-build libfontconfig-dev:i386 libfontconfig-dev
+          cd scripting
+          chmod +x *
+          ./compile.sh
+          zip -r compiled.zip scripting/compiled
       - name: Configure project
         run: cmake --preset "linux-release-${{ matrix.arch }}"
       - name: Build
-        run: cmake --build . 
+        run: cmake --build .
         working-directory: build
       - name: Package
         run: cpack --config CPackConfig.cmake
@@ -108,7 +31,6 @@ jobs:
         with:
           name: ${{ runner.os }}-${{ matrix.arch }}
           path: build/*.tar.gz
-
   release:
     name: Release
     runs-on: ubuntu-latest
@@ -126,14 +48,8 @@ jobs:
           repo: ${{ env.GITHUB_REPOSITORY }}
       - name: Prepare release
         run: |
-          mv Android/app-debug-signed.apk CS16Client-Android.apk
-
-          mv */*.zip .  # move all zip files to the current directory
-          mv */*.tar.gz .  # move all tar.gz files to the current directory
-
-          # فشرده‌سازی فایل‌های موجود در دایرکتوری scripting/compiled
-          zip -r compiled.zip scripting/compiled
-
+          mv */*.zip .
+          mv */*.tar.gz .
           sleep 60s
       - name: Purge artifacts
         uses: geekyeggo/delete-artifact@v2
@@ -147,6 +63,9 @@ jobs:
           file_glob: true
           file: CS16Client-*
           tag: continuous
+          overwrite: true
+          prerelease: true
+          release_name: amx_compiler
           overwrite: true
           prerelease: true
           release_name: CS16Client development build
