--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -17,7 +17,7 @@ jobs:
           cd scripting
           chmod +x *
           ./compile.sh
-          zip -r compiled.zip scripting/compiled
+          zip -r compiled.zip compiled
       - name: Configure project
         run: cmake --preset "linux-release"
       - name: Build
