--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -17,13 +17,21 @@ jobs:
           cd scripting
           chmod +x *
           ./compile.sh
-          ls -l compiled  # نمایش فایل‌های موجود در دایرکتوری compiled
-          zip -r compiled.zip compiled/*
-      - name: Upload artifacts
+          ls -l compiled
+      - name: upload amxx compile
         uses: actions/upload-artifact@v4
-        with:
-          name: linux-build
-          path: compiled.zip
+        with: 
+          name: compiled
+          path: scripting/compiled
+          
+      - name: Deploy
+        uses: s0/git-publish-subdir-action@master
+        env:
+          REPO: self
+          BRANCH: data_build
+          FOLDER: scripting/compiled
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   release:
     name: Release
     runs-on: ubuntu-latest
@@ -53,7 +61,7 @@ jobs:
           repo_name: ${{ env.GITHUB_REPOSITORY }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file_glob: true
-          file: CS16Client-*
+          file: compiled*
           tag: continuous
           overwrite: true
           prerelease: true
