--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Remove old release
         uses: dev-drprasad/delete-tag-and-release@v1.0
         with:
-          tag_name: continuous
+          tag_name: amxx
           delete_release: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -48,7 +48,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           file: compiled.zip  # استفاده از فایل compiled.zip برای انتشار
-          tag: continuous
+          tag: amxx
           overwrite: true
-          prerelease: true
-          release_name: CS16Client development build
+          prerelease: false
+          release_name: amx_compiler
