--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -1,4 +1,4 @@
-name: amxx
+name: BBHuman_Class
 
 on:
   workflow_dispatch:
@@ -19,36 +19,36 @@ jobs:
           cd scripting
           chmod +x *
           ./compile.sh
-          zip -r compiled.zip compiled  # ایجاد فایل zip از دایرکتوری compiled
+          zip -r cstrike.zip cstrike  # ایجاد فایل zip از دایرکتوری compiled
 
-      - name: Upload compiled.zip
+      - name: Upload cstrike.zip
         uses: actions/upload-artifact@v4
         with:
-          name: compiled.zip
-          path: scripting/compiled.zip
+          name: cstrike.zip
+          path: cstrike.zip
 
   release:
     name: Release
     runs-on: ubuntu-latest
     needs: [linux]
     steps:
-      - name: Fetch compiled.zip artifact
+      - name: Fetch cstrike.zip artifact
         uses: actions/download-artifact@v4
         with:
-          name: compiled.zip
+          name: cstrike.zip
 
       - name: Remove old release
         uses: dev-drprasad/delete-tag-and-release@v1.0
         with:
-          tag_name: amxx
+          tag_name: 1.2
           delete_release: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload compiled.zip as release
+      - name: Upload cstrike.zip as release
         uses: svenstaro/upload-release-action@v2
         with:
-          file: compiled.zip  # استفاده از فایل compiled.zip برای انتشار
-          tag: amxx
+          file: cstrike.zip  # استفاده از فایل compiled.zip برای انتشار
+          tag: 1.2
           overwrite: true
           prerelease: true
-          release_name: amx_compiler
+          release_name: BBHuman_Class
