--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -50,5 +50,5 @@ jobs:
           file: compiled.zip  # استفاده از فایل compiled.zip برای انتشار
           tag: amxx
           overwrite: true
-          prerelease: true
+          prerelease: False
           release_name: amx_compiler
